fix css pagination mobile

--- a/css/scss/modules/sensei-lms/modules/_pagination.scss
+++ b/css/scss/modules/sensei-lms/modules/_pagination.scss
@@ -6,4 +6,7 @@
   .nav-prev, .nav-next {
     float: none;
   }
+  .nav-next {
+    margin-left: auto;
+  }
 }
