--- a/css/scss/site/sidebar/_sidebar.scss
+++ b/css/scss/site/sidebar/_sidebar.scss
@@ -34,5 +34,6 @@
 	}
 	@media ( max-width: $media__medium ) {
 		padding-left: 0;
+    margin-top: 2em;
 	}
 }
