--- a/css/style.css
+++ b/css/style.css
@@ -3586,6 +3586,9 @@ body.single-lesson .video iframe {
 .sensei-pagination .nav-prev, .sensei-pagination .nav-next {
   float: none;
 }
+.sensei-pagination .nav-next {
+  margin-left: auto;
+}
 
 .course-container div.sensei-message.info .sensei-message.info,
 .course-container p.sensei-message.info .sensei-message.info,
@@ -3762,6 +3765,10 @@ body.single-lesson .video iframe {
   background: #1fc588;
   border: 0;
   fill: #fff;
+}
+
+body.single-quiz #sensei-quiz-actions {
+  margin-bottom: 2em;
 }
 
 .header-profile-container {
@@ -4826,6 +4833,7 @@ ul.wp-block-gallery .blocks-gallery-item a:hover::after {
 @media (max-width: 770px) {
   #secondary {
     padding-left: 0;
+    margin-top: 2em;
   }
 }
 
